fix for social on mobile

--- a/css/02-home.css
+++ b/css/02-home.css
@@ -820,6 +820,6 @@ html.no-csstransitions .home-content__main {
         width: 100%;
     }
     .home-social {
-        display: none;
+        /*display: none;*/
     }
 }
